<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
<android.support.constraint.ConstraintLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorAccent"
    tools:context="rofaeil.ashaiaa.idea.cameraapp.camera.CameraFragment">


    <com.flurgle.camerakit.CameraView
        android:id="@+id/camera_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.flurgle.camerakit.CameraView>


    <ImageView
        android:id="@+id/iv_toggle_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:alpha=".85"
        android:contentDescription="@string/toggle_camera_content_description"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_camera_front_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/open_gallery_content_description"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:alpha=".85"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_home_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:visibility="invisible"
        android:alpha=".4"
        android:id="@+id/iv_timer_seconds"
        android:layout_width="75dp"
        android:layout_height="64dp"
        android:contentDescription="@string/timer_counter_content_description"
        android:src="@drawable/ic_timer_10_white_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />

    <FrameLayout
        android:id="@+id/grid_lines_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".5"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/view1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="1" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintVertical_weight="1" />

        </android.support.constraint.ConstraintLayout>


    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/constraintLayout">

        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:id="@+id/iv_toggle_flash"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:contentDescription="@string/enable_flash_content_description"
            android:src="@drawable/ic_flash_default_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_toggle_timer"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/enable_grid_lines_content_description"
            android:id="@+id/iv_toggle_grid"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_grid_on_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_view_last_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_view_last_image"
            app:layout_constraintTop_toTopOf="@+id/iv_view_last_image" />

        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/ic_camera_white_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_view_last_image"
            app:layout_constraintStart_toEndOf="@+id/iv_toggle_timer"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="157dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:id="@+id/iv_toggle_timer"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:contentDescription="@string/change_timer_content_description"
            android:src="@drawable/ic_access_time_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_toggle_flash"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/iv_toggle_flash"
            app:layout_constraintTop_toTopOf="@+id/iv_toggle_flash" />

        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:id="@+id/iv_view_last_image"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:contentDescription="@string/open_last_taken_image_content_description"
            android:src="@drawable/ic_photo_size_select_actual_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_toggle_timer"
            app:layout_constraintEnd_toStartOf="@+id/iv_toggle_grid"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/iv_toggle_timer" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/background_camera_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="9.5dp"
        android:id="@+id/view" />

    <ImageView
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/iv_take_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/take_photo_content_description"
        android:src="@drawable/ic_camera_black_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>

</layout>
